# log_parser

./: Makefile  README.md  config.py  data_loader.py  event_sequence_manager.py  main.py  pyproject.toml
files/: output.csv  test_csv.csv
