[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = ['E501', 'E203']

[tool.poetry]
name = "log-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.14.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
